Start of RoleUser implementation, addition of get all methods for User and Role
