# storage/api-docs/api-docs.json
@@ -31,14 +31,36 @@
             }
         },
         "/api/roles": {
+            "get": {
+                "tags": [
+                    "roles"
+                ],
+                "summary": "Get All Roles",
+                "operationId": "getRole",
+                "responses": {
+                    "200": {
+                        "description": "Array of all Roles",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Role"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "tags": [
                     "roles"
                 ],
-                "summary": "Create role",
+                "summary": "Create Role",
                 "operationId": "createRole",
                 "requestBody": {
-                    "description": "Create role object",
+                    "description": "Create Role object",
                     "required": true,
                     "content": {
                         "application/json": {
@@ -60,7 +82,7 @@
                 "tags": [
                     "roles"
                 ],
-                "summary": "Get role",
+                "summary": "Get Role",
                 "operationId": "getRole",
                 "parameters": [
                     {
@@ -75,7 +97,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "The specified role",
+                        "description": "The specified Role",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -90,7 +112,7 @@
                 "tags": [
                     "roles"
                 ],
-                "summary": "Update role",
+                "summary": "Update Role",
                 "operationId": "updateRole",
                 "parameters": [
                     {
@@ -104,7 +126,7 @@
                     }
                 ],
                 "requestBody": {
-                    "description": "Update role object",
+                    "description": "Update Role object",
                     "required": true,
                     "content": {
                         "application/json": {
@@ -124,7 +146,7 @@
                 "tags": [
                     "roles"
                 ],
-                "summary": "Delete role",
+                "summary": "Delete Role",
                 "operationId": "deleteRole",
                 "parameters": [
                     {
@@ -139,12 +161,34 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "The role has been deleted"
+                        "description": "The Role has been deleted"
                     }
                 }
             }
         },
         "/api/users": {
+            "get": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get All Users",
+                "operationId": "getUser",
+                "responses": {
+                    "200": {
+                        "description": "Array of all Users",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/User"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "tags": [
                     "users"
